part1/exercise1.08/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-server-dep
  labels:
    app: hello-server
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hello-server
  template:
    metadata:
      labels:
        app: hello-server
    spec:
      containers:
      - name: hello-server
        image: yumol/hello-server:1.08
