part1/exercise1.08/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello-server-svc
spec:
  type: ClusterIP
  selector:
    app: hello-server
  ports:
    - port: 2345
      protocol: TCP
      targetPort: 3001
