part1/exercise1.08/manifests/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: hello-server-ingress
spec:
  rules:
  - http:
      paths:
      - path: /
        backend:
          serviceName: hello-server-svc
          servicePort: 2345
